--- a/style/project.css
+++ b/style/project.css
@@ -24,7 +24,6 @@ a.nav-link {
 
 li.nav-item {
   margin: 0 12px;
-  white-space: nowrap;
 }
 
 nav {
@@ -196,7 +195,7 @@ nav img {
 }
 
 #contact {
-  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.4509803922), transparent), url(assets/form.png);
+  background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.4509803922), transparent), url(../images/form.png);
   background-color: #3A3A3A;
   padding: 4vw 3vw !important;
   margin: 0 !important;
