--- a/style/project.scss
+++ b/style/project.scss
@@ -232,7 +232,7 @@ nav img {
 }
 
 #contact {
-    background-image: linear-gradient(45deg, #00000073, transparent), url(assets/form.png);
+    background-image: linear-gradient(45deg, #00000073, transparent), url(../images/form.png);
     background-color: #3A3A3A;
     padding: 4vw 3vw !important;
     margin: 0 !important;
