--- a/projects/Project 3/style/P3.scss
+++ b/projects/Project 3/style/P3.scss
@@ -10,7 +10,7 @@ body {
 
 
     .bg {
-        background-image: url(Path\ 15.png);
+        background-image: url(../images/Path\ 15.png);
         height: 50%;
         width: 100%;
         position: fixed;
