--- a/style/project.css
+++ b/style/project.css
@@ -105,6 +105,7 @@ nav img {
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1607843137);
   direction: ltr;
   padding: 8px;
+  margin: auto;
 }
 .logos img {
   height: 80px;
@@ -112,6 +113,17 @@ nav img {
 }
 .logos img:hover {
   scale: 1.1;
+}
+.logos .new {
+  height: 36px;
+  margin: 8px;
+  margin-left: 20px;
+}
+.logos #ts {
+  height: 43px;
+}
+.logos .oop {
+  margin-right: 10px;
 }
 
 #about {
@@ -147,7 +159,6 @@ nav img {
 #gallery {
   padding: 100px 0;
   background-color: #f3f3f3;
-  margin-top: 30px;
 }
 #gallery h2 {
   text-align: center;
