--- a/JS-TS-Projects/project2/style/style.css
+++ b/JS-TS-Projects/project2/style/style.css
@@ -1,40 +1,247 @@
-@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400;500;600;700;800&family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600;700;900&display=swap');
+
+html {
+    min-height: 100%;
+}
+
 body {
-  height: 921px;
-  background-image: linear-gradient(60deg, #071192 0%, #F81E70 100%);
-  direction: rtl;
-  background-repeat: no-repeat;
-  display: flex;
-  align-items: center;
+    direction: rtl;
+    background-image: linear-gradient(#3dbf23, white);
+    padding-bottom: 200px;
 }
-body .prime {
-  padding: 80px;
-  height: 80%;
-  width: 45%;
-  background-color: rgb(243, 243, 237);
-  margin-right: 100px;
-  box-sizing: border-box;
+
+* {
+    font-family: 'Rubik', sans-serif !important;
 }
-body .prime h1 {
-  margin-top: 0;
-  font: normal normal 900 36px/53px Heebo;
+
+h1 {
+    text-align: center;
+    color: white;
+    margin: 16px;
 }
-body .prime p {
-  font: normal normal normal 20px/29px Heebo;
+
+.frame {
+    width: 80%;
+    max-width: 900px;
+    min-height: 300px;
+    background-color: #ffffffc9;
+    margin: auto;
+    padding: 8px 16px;
+    border-radius: 6px;
 }
-body .prime button {
-  font: normal normal 900 22px/30px Heebo;
+
+.task {
+    border-bottom: 1px solid #c1c1c1;
+    padding-bottom: 12px;
 }
-body .prime label {
-  text-align: right;
-  font: normal normal bold 16px/24px Heebo;
-  letter-spacing: 0px;
-  color: #2C2C2C;
-  opacity: 1;
+
+h2 {
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 0;
+    margin: 0px;
 }
-body .prime input {
-  font: normal normal 900 20px/53px Heebo;
+
+button {
+    background-color: #8bc34a;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    margin-right: 8px;
 }
-body .prime span {
-  display: block;
-}/*# sourceMappingURL=style.css.map */
+
+button:hover {
+    filter: brightness(1.2);
+}
+
+input,
+select {
+    border: 1px solid black;
+    padding: 8px 12px;
+    border-radius: 5px;
+    margin-top: 3px;
+}
+
+.congrats,
+.login,
+.user,
+.products {
+    display: none;
+}
+
+.congrats .frame {
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #07109200;
+}
+
+.congrats .frame button {
+    font-size: 20px;
+}
+.logout {
+    background-color: gray;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 16px;
+}
+
+tr {
+    background-color: white;
+}
+
+thead tr {
+    background-color: #3dbf23;
+    color: white;
+}
+
+tr:nth-child(even) {
+    background-color: #d9d9d9;
+}
+
+th,
+td {
+    padding: 6px;
+    text-align: center;
+}
+
+.remove,
+.save {
+    margin: 0;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.remove:hover,
+.save:hover {
+    scale: 1.5;
+}
+
+.remove {
+    background: none;
+}
+
+.save {
+    background: none;
+    visibility: hidden;
+}
+
+.loaderFrame {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #000000a3;
+    display: none;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid gray;
+    width: 50px;
+    height: 50px;
+    -webkit-animation: spin 1s linear infinite;
+    /* Safari */
+    animation: spin 1s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
+}
+
+@keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
+    }
+
+    to {
+        bottom: 30px;
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
+
+@keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+
+    to {
+        bottom: 0;
+        opacity: 0;
+    }
+}
