--- a/JS-TS-Projects/project3/style/style.css
+++ b/JS-TS-Projects/project3/style/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@800&family=Heebo:wght@100;200;300;400;500;600;700&family=Kablammo&family=Lobster&family=Oswald:wght@200;300;400;500;600;700&family=Satisfy&family=Sigmar&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@800&family=Heebo:wght@100;200;300;400;500;600;700&family=IBM+Plex+Sans+Hebrew:wght@400;500;600;700&family=Kablammo&family=Lobster&family=Oswald:wght@200;300;400;500;600;700&family=Satisfy&family=Sigmar&family=Varela+Round&display=swap');
 
 html {
     min-height: 100%;
@@ -25,7 +26,7 @@ h1 {
     width: 80%;
     max-width: 900px;
     min-height: 300px;
-    background-color: #0c040463;
+    background-color: #08040449;
     margin: auto;
     padding: 8px 16px;
     border-radius: 6px;
@@ -44,23 +45,26 @@ h2 {
 }
 
 button {
-    background-color: #8bc34ae8;;
-    color: white;
+    background-image: linear-gradient(60deg, #c46b6b 0%, #dfae54 100%);
+    color: rgb(253, 253, 253);
     padding: 8px 12px;
     border-radius: 6px;
     border: none;
+    font-size: 13px;
+    font-weight: 500;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 button:hover {
     opacity: 0.8;
 }
 
-input,
-select {
+input,select {
     border: 1px solid black;
     padding: 8px 12px;
     border-radius: 5px;
     margin-top: 3px;
+    background-color: rgb(228, 217, 201);
 }
 
 img {
@@ -92,6 +96,7 @@ header {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+    
 }
 
 @media (max-width: 930px) {
@@ -108,7 +113,7 @@ header {
 
 .tasks>div {
     box-shadow: 0 0 3px #bababa;
-    background-color: rgba(240, 246, 247, 0.788);
+    background-color: rgb(231, 207, 174);
     border-radius: 5px;
     padding: 0 14px;
     font-family: 'Rubik', sans-serif;
@@ -119,11 +124,11 @@ header {
 }
 
 .tasks>div.low {
-    border-color: #006980;
+    border-color: #f3f70a;
 }
 
 .tasks>div.medium {
-    border-color: orange;
+    border-color: rgb(45, 202, 6);
 }
 
 .tasks>div.high {
@@ -132,7 +137,7 @@ header {
 
 .tasks>div.completed {
     border: none;
-    background-color: #29AA74;
+    background-color: #209944;
 }
 
 .tasks footer {
