--- a/JS-TS-Projects/project2/style/userstyle.css
+++ b/JS-TS-Projects/project2/style/userstyle.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
+  padding: 0;
 }
 
 body {
@@ -25,11 +26,6 @@ body .frame {
 @media screen and (max-width: 915px) {
   body .frame {
     width: 100%;
-  }
-}
-@media screen and (max-width: 575px) {
-  body .frame {
-    padding-right: 10px;
   }
 }
 body .frame h1 {
