--- a/JS-TS-Projects/project2/style/userstyle.scss
+++ b/JS-TS-Projects/project2/style/userstyle.scss
@@ -2,6 +2,7 @@
 
 * {
     margin:0;
+    padding: 0;
 }
 
 
@@ -27,10 +28,7 @@ body {
             width: 100%;
         }
 
-        @media screen and (max-width:575px) {
-           padding-right: 10px;
-        }
-
+       
 
 
 
