--- a/JS-TS-Projects/project2/style/userstyle.scss
+++ b/JS-TS-Projects/project2/style/userstyle.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
@@ -17,6 +17,9 @@ body {
     @media screen and (max-width:920px) {
         display: block;
     }
+    @media screen and (max-width:570px) {
+        min-height: 700px;
+    }
 
     .frame {
         display: flex;
@@ -26,7 +29,9 @@ body {
 
         @media screen and (max-width: 915px) {
             width: 100%;
+            
         }
+        
 
        
 
@@ -138,6 +143,7 @@ body {
         }
 
     }
+    
 
     .login {
         margin-right: 20px;
@@ -209,7 +215,7 @@ body {
     }
 
     .signUp {
-        margin-left: 20px;
+        margin: 20px;
     }
 
     .c1 {
@@ -217,6 +223,7 @@ body {
         background-image: url(../images/signup.png);
         background-position: center;
         background-size: cover;
+       
        
         
 
