--- a/JS-TS-Projects/project1/style/style.scss
+++ b/JS-TS-Projects/project1/style/style.scss
@@ -490,8 +490,8 @@ button:hover {
     }
 
     @media (max-width:414px) {
-        width: 6px;
-        height: 6px;
+        width: 7px;
+        height: 7px;
 
     }
 
@@ -506,11 +506,14 @@ button:hover {
 
 
 .active {
-    background-image: radial-gradient(#212121 20%, transparent 20%),
-        radial-gradient(#fafafa 20%, transparent 20%);
-    background-color: #44e535;
+    background-image: radial-gradient(#160212 20%, transparent 20%),
+        radial-gradient(#249203 20%, transparent 20%);
+    background-color: #139433;
     background-position: 0 0, 50px 50px;
     background-size: 9px 9px;
+    @media (max-width:561px) {
+        background-size: 7px 7px;
+    }
 }
 
 .head.up {
