--- a/style/project.css
+++ b/style/project.css
@@ -75,7 +75,7 @@ span {
   }
 }
 .main p {
-  font-size: 20px;
+  font-size: 22px;
   color: #272323;
   text-align: center;
   font: normal normal medium 20px/30px Heebo;
@@ -268,4 +268,25 @@ footer {
   .imgC img {
     width: 95%;
   }
+}
+
+.contactDone {
+  direction: rtl;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+.contactDone h3 {
+  font-size: 40px;
+}
+@media screen and (max-width: 620px) {
+  .contactDone h3 {
+    font-size: 28px;
+  }
+}
+.contactDone p {
+  display: flex;
+  flex-direction: column;
+  margin-left: 450px;
+  margin-top: 5px;
 }/*# sourceMappingURL=project.css.map */
