--- a/style/project.css
+++ b/style/project.css
@@ -80,6 +80,11 @@ span {
   text-align: center;
   font: normal normal medium 20px/30px Heebo;
 }
+@media screen and (max-width: 420px) {
+  .main p {
+    font-size: 18px;
+  }
+}
 .main .btn {
   font-family: "Heebo", Sans-serif;
   margin: 0 5px;
@@ -138,12 +143,23 @@ nav img {
   height: 139px;
   border-radius: 50%;
 }
+@media screen and (width: 280px) {
+  #about img {
+    width: 101px;
+    height: 109px;
+  }
+}
 #about h2 {
   font: normal normal 900 35px/52px Heebo;
   letter-spacing: 0px;
   color: #3A3A3A;
   opacity: 1;
   margin: 20px;
+}
+@media screen and (max-width: 450px) {
+  #about h2 {
+    font-size: 25px;
+  }
 }
 #about .but1 {
   background: #1AE0EC 0% 0% no-repeat padding-box;
@@ -154,6 +170,12 @@ nav img {
   width: 240px;
   height: 41px;
   margin-top: 20px;
+}
+@media screen and (max-width: 450px) {
+  #about .but1 {
+    width: 160px;
+    font-size: 14px;
+  }
 }
 
 #gallery {
@@ -278,15 +300,36 @@ footer {
 }
 .contactDone h3 {
   font-size: 40px;
+  margin-bottom: 10px;
+  margin-left: 44px;
+  color: #08525c;
 }
 @media screen and (max-width: 620px) {
   .contactDone h3 {
     font-size: 28px;
   }
 }
+@media screen and (max-width: 420px) {
+  .contactDone h3 {
+    font-size: 22px;
+  }
+}
 .contactDone p {
-  display: flex;
-  flex-direction: column;
-  margin-left: 450px;
+  display: inline;
+  margin-left: 350px;
   margin-top: 5px;
+  color: #0c3252;
+}
+.contactDone .email {
+  padding-right: 80px;
+}
+@media screen and (max-width: 830px) {
+  .contactDone .email {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 420px) {
+  .contactDone span {
+    font-size: 18px;
+  }
 }/*# sourceMappingURL=project.css.map */
