--- a/style/project.scss
+++ b/style/project.scss
@@ -90,6 +90,9 @@ span {
         color: #272323;
         text-align: center;
         font: normal normal medium 20px/30px Heebo;
+        @media screen and (max-width:420px){
+            font-size: 18px; 
+        }
     }
 
     .btn {
@@ -161,7 +164,10 @@ nav img {
         width: 141px;
         height: 139px;
         border-radius: 50%;
-
+       @media screen and (width:280px){
+        width: 101px;
+        height: 109px;
+       }
 
     }
 
@@ -171,6 +177,9 @@ nav img {
         color: #3A3A3A;
         opacity: 1;
         margin: 20px;
+        @media screen and (max-width:450px){
+            font-size: 25px;
+        }
     }
 
     .but1 {
@@ -182,6 +191,10 @@ nav img {
         width: 240px;
         height: 41px;
         margin-top: 20px;
+        @media screen and (max-width:450px){
+            width: 160px;
+            font-size: 14px;
+        }
     }
 }
 
@@ -293,6 +306,7 @@ nav img {
     span {
         margin: 8px 0;
         display: inline-block;
+        
     }
 
 }
@@ -322,19 +336,39 @@ footer {
     text-align: center;
     display: flex;
     flex-direction: column;
+    
+    
     h3{
         font-size: 40px;
+        margin-bottom: 10px;
+        margin-left: 44px;
+        color: #08525c;
         @media screen and (max-width:620px) {
             font-size: 28px; 
         }
+        @media screen and (max-width:420px){
+            font-size: 22px; 
+        }
     }
     p{
-        display: flex;
-        flex-direction: column;
-        margin-left: 450px;
+        display: inline;
+        margin-left: 350px;
         margin-top: 5px;
-       
+        color: #0c3252;
+        
     }
+    .email {
+        padding-right: 80px;
+        @media screen and (max-width:830px) {
+        padding: 0;
+        }
+    }
+    span {
+        @media screen and (max-width:420px){
+            font-size: 18px; 
+        }
+    }
+  
 }
 
 
