--- a/style/project.css
+++ b/style/project.css
@@ -61,7 +61,7 @@ span {
   margin: 0 !important;
   background-color: #000000;
   opacity: 1;
-  background-image: linear-gradient(45deg, rgba(19, 232, 241, 0.3019607843), rgba(19, 232, 241, 0.3019607843)), url(../images/WAVES.png);
+  background-image: linear-gradient(45deg, rgba(46, 209, 214, 0.548), rgba(55, 221, 213, 0.288)), url(../images/WAVES.png);
   background-size: cover;
 }
 .main h1 {
@@ -294,7 +294,7 @@ footer {
 
 .contactDone {
   direction: rtl;
-  text-align: center;
+  text-align: right;
   display: flex;
   flex-direction: column;
 }
@@ -302,7 +302,7 @@ footer {
   font-size: 40px;
   margin-bottom: 10px;
   margin-left: 44px;
-  color: #08525c;
+  color: #033653;
 }
 @media screen and (max-width: 620px) {
   .contactDone h3 {
@@ -319,14 +319,7 @@ footer {
   margin-left: 350px;
   margin-top: 5px;
   color: #0c3252;
-}
-.contactDone .email {
-  padding-right: 80px;
-}
-@media screen and (max-width: 830px) {
-  .contactDone .email {
-    padding: 0;
-  }
+  text-align: right;
 }
 @media screen and (max-width: 420px) {
   .contactDone span {
